# mds_toy_cg

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: mds_toy_cg.rst  modules.rst
tests/: test_mds_toy_cg.py
